[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-vc"
version = "0.4.3"
description = "Seed-VC voice conversion"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "descript-audio-codec>=1.0.0",
    "einops>=0.8.0",
    "funasr>=1.1.5",
    "huggingface-hub>=0.28.1",
    "hydra-core>=1.3.2",
    "jiwer>=3.0.3",
    "librosa>=0.10.2",
    "modelscope>=1.18.1",
    "munch>=4.0.0",
    "numpy>=1.26.4",
    "pydub>=0.25.1",
    "python-dotenv",
    "pyyaml",
    "resemblyzer",
    "scipy>=1.13.1",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.1",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.46.3",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.23.0",
    "FreeSimpleGUI>=5.1.1",
]

[tool.setuptools]
packages = ["seed_vc"]

[tool.setuptools.package-data]
seed_vc = ["**/*"]