[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-vc"
version = "0.4.3"
description = "Seed-VC packaged fork"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }

dependencies = [
    "accelerate",
    "argbind",
    "einops",
    "ffmpy",
    "flatten-dict",
    "huggingface-hub",
    "hydra-core",
    "importlib-resources",
    "ipython",
    "jiwer",
    "julius",
    "librosa",
    "markdown2",
    "matplotlib",
    "munch",
    "numpy>=1.26.4",
    "protobuf",
    "pydub",
    "pyloudnorm",
    "pystoi",
    "python-dotenv",
    "pyyaml",
    "randomname",
    "resemblyzer",
    "rich",
    "scipy",
    "soundfile",
    "tensorboard",
    "torch",
    "torch-stoi",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
]

[tool.setuptools]
py-modules = [
    "app",
    "app_svc",
    "app_vc",
    "app_vc_v2",
    "eval",
    "hf_utils",
    "inference",
    "inference_v2",
    "optimizers",
    "real-time-gui",
    "seed_vc_wrapper",
    "train",
    "train_v2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "modules*",
    "baselines*",
]
exclude = [
    "assets*",
    "configs*",
    "data*",
    "examples*",
]
