[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-vc"
version = "0.4.3"
description = "Seed-VC packaged fork with relaxed dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }

dependencies = [
    "accelerate",
    "argbind",
    "einops",
    "ffmpy",
    "flatten-dict",
    "huggingface-hub",
    "hydra-core",
    "importlib-resources",
    "ipython",
    "jiwer",
    "julius",
    "librosa",
    "markdown2",
    "matplotlib",
    "munch",
    "numpy>=1.26.4",
    "protobuf",
    "pydub",
    "pyloudnorm",
    "pystoi",
    "python-dotenv",
    "pyyaml",
    "randomname",
    "resemblyzer",
    "rich",
    "scipy",
    "soundfile",
    "tensorboard",
    "torch",
    "torch-stoi",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "seed_vc*",
    "audiocodec*",
    "audiotools*",
]

[tool.setuptools.package-data]
seed_vc = [
    "**/*.yaml",
    "**/*.yml",
    "**/*.json",
    "**/*.bin",
    "**/*.txt",
]

audiotools = [
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.json",
    "**/*.yaml",
    "**/*.yml",
    "**/*.txt",
]

audiocodec = [
    "**/*.json",
    "**/*.yaml",
    "**/*.yml",
    "**/*.txt",
]